<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sinesoftware.arcane.MainActivity"
    android:background="@color/black_overlay">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/logo"
        android:src="@mipmap/ic_launcher"
        android:layout_above="@+id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:contentDescription="@string/AppName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signup"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSignUpPress"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/colorSecondary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="onLoginPress"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/colorSecondary"/>

    <!--<com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fb_login"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        /> -->
</RelativeLayout>
