<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.sinesoftware.arcane.RadioScreen">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:background="@color/colorSecondary"
            >
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="7dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:src="@drawable/ic_menu_black_48dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="-50dp">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSecondary"
                    android:src="@drawable/ic_play_arrow_black_48dp"
                    android:contentDescription="@string/play_description"
                    android:onClick="buttonControl"
                    android:id="@+id/action_button"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="24dp"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSecondary"
                    android:src="@drawable/ic_skip_next_black_48dp"
                    android:onClick="skipSong"
                    android:contentDescription="@string/skip_description"
                    android:id="@+id/skip_button"/>
            </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="500dp"/>
        <ImageView
            android:id="@+id/song_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/song_canvas_description"
            android:layout_gravity="center"
            />
    </LinearLayout>



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">


        </LinearLayout>
    </FrameLayout>

</FrameLayout>
